# VBR

./: Cargo.toml  IMPLEMENTATION_SUMMARY.md  VBR_Forms.md  VBR_Forms_Implementation.md  VBR_Stdlib_Implementation.md  VBR_TUI_Spec.md  VBR_V11_additions.md:Zone.Identifier  VBR_Vec.md  VBR_Vec.md:Zone.Identifier  VBR_webgui_spec.md  readme.md
src/: ast.rs  form_parser.rs  lexer.rs  main.rs  parser.rs  transpiler.rs
tests/: hello_world.layout.json  hello_world.vb  hello_world.wasm.rs  multiline_demo.vb  test_advanced.vb  test_basic.vb  test_errors.vb  test_form.vb  test_vec.vb
vbr_forms_core/: Cargo.toml
vbr_forms_core/src/: lib.rs
vbr_forms_cursive/: Cargo.toml
vbr_forms_cursive/examples/: settings.rs
vbr_forms_cursive/src/: lib.rs
vbr_forms_egui/: Cargo.toml
vbr_forms_egui/examples/: settings.rs
vbr_forms_egui/src/: lib.rs
vbr_forms_web/: Cargo.toml
vbr_forms_web/react/: VbrForm.tsx  types.ts
vbr_forms_web/src/: lib.rs
vbr_stdlib/: Cargo.toml
vbr_stdlib/src/: datetime.rs  filesystem.rs  http.rs  json.rs  lib.rs  regex.rs
