[package]
name = "vbr_stdlib"
version = "0.1.0"
edition = "2021"
description = "VBR Standard Library — friendly wrappers for common Rust operations"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4"
regex = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
